--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,8 +77,10 @@ $bright-blue: #87B0EF;
 $bright-green: #87EFB4;
 $bright-yellow: #EFE587;
 
-$main: 800 5rem/2.5rem Montserrat, sans-serif;
-$paragraph: 500 1.3em/2em Montserrat, sans-serif;
+$font_main: 800 4.5rem/1.1em Montserrat, sans-serif;
+$font_big: 800 3.5rem/1.3em Montserrat, sans-serif;
+$font_small: 600 2rem/1.3em Montserrat, sans-serif;
+$paragraph: 500 1.1em/1.7em Montserrat, sans-serif;
 $nav-font: 500 0.7em/2em Montserrat, sans-serif;
 
 
@@ -92,7 +94,7 @@ $nav-font: 500 0.7em/2em Montserrat, sans-serif;
 /* <---------- General ----------> */
 
 html { 
-	font-size: 16px; 
+	font-size: 20px; 
 	cursor: none; 
 	
 	::-webkit-scrollbar {
@@ -158,27 +160,54 @@ body {
 		mix-blend-mode: difference;
 	}
 
-	.main {
-		font: $main;
+	.font_main {
+		font: $font_main;
 		color: $light-grey;
+	}
+
+	.font_big {
+		font: $font_big;
+		color: $light-grey;
+	}
+
+	.font_small {
+		font: $font_small;
+		color: $grey;
 	}
 	
 	section {
-		height: 100vh;
-		// scroll-snap-align: start; //Snap
+		// ! change each sec
+		min-height: 100vh;
+		overflow-x: hidden;
 
 		&#contact {
 			background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-			// background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
 		}
 	}	
 }
+
+@media (max-width: 1250px) { html{ font-size: 18px; }}
+@media (max-width: 1000px) {
+	$font_small: 600 1.3rem/1.3em Montserrat, sans-serif;
+	html{ font-size: 17px; }
+	body {
+		.font_small { font: $font_small; }
+	}
+}
+@media (max-width: 560px) { html{ font-size: 15px; }}
+// todo: not working
+@media (max-width: 370px) { html{ font-size: 14px; }}
+
+
+
+
 
 /* <---------- Navbar ----------> */
 .navbar {
 	height: 100vh;
 	position: fixed;
 	left: 20px;
+	z-index: 90;
 	display: flex; justify-content: center; align-items: center;
 
 	ul {
@@ -213,22 +242,98 @@ body {
 	}
 }
 
+/* <---------- Home ----------> */
 
+#home {
+	position: relative;
 
+	.sub-section_1 {
+		position: relative;
+		top: 15%;
+		left: 10%;
+	}
 
+	.sub-section_2 {
+		position: absolute;
+		margin-left: 15%;
+		right: 10%;
+		bottom: 40%;
+		text-align: right;
 
-/* <---------- Typed ----------> */
+		span {
+			color: $grey;
+		}
 
-.typed-wrapper{
-	font: $main;
-
-	.typed-constant { margin: 40px 0;}
+		.font_small {
+			// position: relative;
+			margin-top: 15px;
+			// top: -20px;
+		}
+	}
 }
+
+@media (max-width: 600px) { 
+	html { font-size: 15px; }
+	#home {
+		.sub-section_2 {
+			bottom: 21%;
+		}
+	}
+}
+
+
+/* <---------- About ----------> */
+
+#about {
+	position: relative;
+
+	display: flex; 
+	flex-direction: row;
+	@media (max-width: 1025px) { flex-direction: column; }
+	.sub-section_1 {
+		position: relative;
+		padding: 13% 20px 0 7%;
+		width: 50%;
+
+		p {
+			max-width: 600px;
+		}
+
+		@media (max-width: 1025px) { 
+			width: 100%;
+		}
+	}
+
+	.sub-section_2 {
+		width: 50%;
+		font: $font_main;
+
+		position: absolute;
+		top: 60%;
+		right: 0;
+		padding-right: 10%;
+
+		@media (max-width: 1025px) { 
+			width: 70%;
+		}
+
+		@media (max-width: 640px) { 
+			font: $font_big;
+		}
+
+		@media (max-width: 450px) { 
+			top: 75%;
+			font-size: 40px;
+		}
+	}
+}
+
+
 
 
 /* <---------- Timeline Section ----------> */
 
-.timeline {
+#projects {
 	position: relative;
 	// width: 100%;
 	height: 690px;
@@ -388,16 +493,27 @@ body {
 		input,
 		textarea {
 			width: 100%;
-			margin-top: 7px;
+			margin-top: 8px;
 			padding: 0 10px;
 			font-size: 1em;
-			border-radius: 2px;
+			border-radius: 3px;
 			caret-color: $red;
 
 			&::placeholder {
 				color: $light-grey;
 				font-size: 0.7em;
 
+			}
+		}
+
+		input[type=submit] {
+			background: $background;
+			color: #fff;
+			transition: all 0.3s ease-in;
+
+			&:hover{
+				background: #000;
+				// opacity: 0.8;
 			}
 		}
 
