--- a/css/main.css
+++ b/css/main.css
@@ -65,16 +65,46 @@ a:visited {
 }
 
 /* <---------- Variables ----------> */
+.color_1 {
+  color: #87EFB4;
+}
+
+.color_2 {
+  color: #ED6767;
+}
+
+.color_3 {
+  color: #F88EE3;
+}
+
+.color_4 {
+  color: #87B0EF;
+}
+
 /* <---------- General ----------> */
 html {
-  font-size: 16px;
+  font-size: 20px;
   cursor: none;
+}
+html ::-webkit-scrollbar {
+  width: 3px;
+}
+html ::-webkit-scrollbar-track {
+  background: transparent;
+}
+html ::-webkit-scrollbar-thumb {
+  background: #707070;
+  border-radius: 5px;
+  transition: background 0.3s;
+}
+html ::-webkit-scrollbar-thumb:hover {
+  background: #87B0EF;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
   background: #2c2c2e;
-  font: 500 1.3em/2em Montserrat, sans-serif;
+  font: 500 1.1em/1.7em Montserrat, sans-serif;
   color: #707070;
 }
 body ::-moz-selection {
@@ -100,105 +130,300 @@ body #cursor {
 }
 body #cursor.hover {
   transform: scale(3) translate(-50%, -50%);
+  mix-blend-mode: difference;
 }
-body .main {
-  font: 800 5rem/2.5rem Montserrat, sans-serif;
+body .font_main {
+  font: 800 4.5rem/1.1em Montserrat, sans-serif;
   color: #B8B8B8;
 }
+body .font_big {
+  font: 800 3.5rem/1.3em Montserrat, sans-serif;
+  color: #B8B8B8;
+}
+body .font_small {
+  font: 600 2rem/1.3em Montserrat, sans-serif;
+  color: #707070;
+}
 body section {
-  height: 100vh;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+body section#contact {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
-/* <---------- Typed ----------> */
-.typed-wrapper {
-  font: 800 5rem/2.5rem Montserrat, sans-serif;
+@media (max-width: 1250px) {
+  html {
+    font-size: 18px;
+  }
 }
-.typed-wrapper .typed-constant {
-  margin: 40px 0;
+@media (max-width: 1000px) {
+  html {
+    font-size: 17px;
+  }
+
+  body .font_small {
+    font: 600 1.3rem/1.3em Montserrat, sans-serif;
+  }
 }
-.typed-wrapper .color_1 {
-  color: #87EFB4;
+@media (max-width: 560px) {
+  html {
+    font-size: 15px;
+  }
 }
-.typed-wrapper .color_2 {
-  color: #ED6767;
+@media (max-width: 370px) {
+  html {
+    font-size: 14px;
+  }
 }
-.typed-wrapper .color_3 {
-  color: #F88EE3;
+/* <---------- Navbar ----------> */
+.navbar {
+  height: 100vh;
+  position: fixed;
+  left: 20px;
+  z-index: 90;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.typed-wrapper .color_4 {
-  color: #87B0EF;
+.navbar ul {
+  list-style: none;
+  position: relative;
+  width: 50px;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.navbar ul .nav-item {
+  font: 500 0.7em/2em Montserrat, sans-serif;
+  position: relative;
+  padding: 0 20px;
+  color: #707070;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  transform: rotate(-90deg);
+  transition: color 0.3s ease-out;
+}
+.navbar ul .nav-item.active {
+  color: #B8B8B8;
+}
+
+/* <---------- Contact menu ----------> */
+#contact-menu {
+  position: fixed;
+  z-index: 90;
+  top: 20px;
+  right: 40px;
+  transition: opacity 0.3s;
+}
+#contact-menu ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+#contact-menu ul li {
+  display: inline-block;
+  margin: 10px 5px;
+}
+#contact-menu ul li a {
+  text-decoration: none;
+  display: block;
+  transition: color 0.3s;
+  font: 500 0.7em/2em Montserrat, sans-serif;
+  color: #B8B8B8;
+}
+#contact-menu ul li.with-flag {
+  position: relative;
+}
+#contact-menu ul li.with-flag .flag {
+  display: none;
+  position: absolute;
+  width: 100px;
+  right: -37px;
+  margin-top: 3px;
+  border-radius: 2px;
+  font-size: 0.8rem;
+  background-color: #B8B8B8;
+  color: #2c2c2e;
+}
+#contact-menu ul li.with-flag:hover .flag {
+  display: block;
+}
+
+/* <---------- Home ----------> */
+#home {
+  position: relative;
+}
+#home .sub-section_2 {
+  text-align: right;
+}
+#home .sub-section_2 span {
+  color: #707070;
+}
+#home .sub-section_2 span.deg {
+  background-image: -webkit-linear-gradient(45deg, #f5efef, #feada6, #ff7eb3, #84fab0, #8fd3f4, #12fff7);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+  background-size: 400%;
+  animation: bg-animation 10s infinite alternate;
+  animation-delay: 1s;
+}
+@keyframes bg-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
+}
+#home .sub-section_2 .font_small {
+  margin-top: 15px;
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 15px;
+  }
+}
+/* <---------- About ----------> */
+#about {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+@media (max-width: 1025px) {
+  #about {
+    flex-direction: column;
+  }
+}
+#about .sub-section_1 {
+  position: relative;
+  padding: 13% 20px 0 7%;
+  width: 50%;
+}
+#about .sub-section_1 p {
+  max-width: 600px;
+}
+@media (max-width: 1025px) {
+  #about .sub-section_1 {
+    width: 100%;
+  }
+}
+#about .sub-section_2 {
+  width: 50%;
+  font: 800 4.5rem/1.1em Montserrat, sans-serif;
+  position: absolute;
+  top: 60%;
+  right: 0;
+  padding-right: 10%;
+}
+@media (max-width: 1025px) {
+  #about .sub-section_2 {
+    width: 70%;
+  }
+}
+@media (max-width: 640px) {
+  #about .sub-section_2 {
+    font: 800 3.5rem/1.3em Montserrat, sans-serif;
+  }
+}
+@media (max-width: 450px) {
+  #about .sub-section_2 {
+    top: 75%;
+    font-size: 40px;
+  }
 }
 
 /* <---------- Timeline Section ----------> */
-.timeline {
+#projects {
   position: relative;
+  display: grid;
   height: 690px;
-  color: white;
   overflow: hidden;
 }
-.timeline .controls-wrapper {
+#projects .controls-wrapper {
   position: absolute;
   z-index: 3;
-  bottom: 15px;
+  top: 65%;
   width: 100%;
 }
-.timeline .controls-wrapper button {
+#projects .controls-wrapper button {
   position: absolute;
   bottom: 100px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: transparent;
-  font-size: 1.2rem;
+  font-size: 1.2 rem;
 }
-.timeline .controls-wrapper button i {
+#projects .controls-wrapper button i {
   color: #fff;
   font-size: 0.8em;
 }
-.timeline .controls-wrapper button.control-prev {
-  left: 15px;
+#projects .controls-wrapper button.control-prev {
+  left: 55px;
 }
-.timeline .controls-wrapper button.control-next {
-  right: 15px;
+#projects .controls-wrapper button.control-next {
+  right: 55px;
 }
-.timeline .indicator {
+#projects .indicator {
   position: absolute;
   width: 200px;
-  bottom: 150px;
-  right: 30px;
+  height: 80px;
+  top: 68%;
+  right: 40px;
+  font-size: 1.8rem;
+  font-weight: 700;
   text-align: end;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 10;
+}
+#projects .indicator .current-viewer {
+  height: 70px;
   overflow: hidden;
+  margin: 0 10px;
 }
-.timeline .indicator .out-of {
-  display: inline-block;
-}
-.timeline .indicator .current-wrapper {
-  position: absolute;
-  right: 45px;
-  font-size: 3em;
+#projects .indicator .current-viewer .current-wrapper {
+  color: #B8B8B8;
+  padding-top: -19px;
   transform: translateY(0);
   transition: transform 0.7s ease-in-out;
 }
-.timeline .red-line {
+#projects .indicator .current-viewer .current-wrapper p {
+  font-size: 2.5em;
+  margin: 40px 0;
+}
+#projects .indicator .out-of {
+  margin-top: 40px;
+}
+#projects .red-line {
   position: absolute;
   width: 100%;
   height: 3px;
   top: 35%;
   background: #ED6767;
 }
-.timeline .projects-wrapper {
+#projects .projects-wrapper {
   border: white 1px solid;
   position: relative;
   height: 600px;
   top: 0;
   left: 0;
+  color: #B8B8B8;
   flex-shrink: 0;
   display: flex;
   flex-flow: column wrap;
   transform: translateX(0);
   transition: all 0.9s cubic-bezier(0.2, 0, 0.2, 1);
 }
-.timeline .projects-wrapper .project {
+#projects .projects-wrapper .project {
   position: relative;
   width: 100%;
   height: 100%;
@@ -206,34 +431,78 @@ body section {
   justify-content: center;
   align-items: center;
 }
-.timeline .projects-wrapper .project .img-wrapper {
+#projects .projects-wrapper .project .project-info {
+  position: absolute;
+  left: 10%;
+  z-index: 5;
+}
+#projects .projects-wrapper .project .project-info h3 {
+  color: #fff;
+  font-size: 5em;
+  font-weight: 700;
+}
+#projects .projects-wrapper .project .img-wrapper {
   position: relative;
 }
-.timeline .projects-wrapper .project .img-wrapper.mobile {
+#projects .projects-wrapper .project .img-wrapper.mobile {
   height: 85%;
   width: fit-content;
 }
-.timeline .projects-wrapper .project .img-wrapper.mobile img {
+#projects .projects-wrapper .project .img-wrapper.mobile img {
   height: 100%;
+  z-index: 0;
 }
-.timeline .projects-wrapper .project .img-wrapper.desktop {
+#projects .projects-wrapper .project .img-wrapper.desktop {
   width: 75%;
 }
-.timeline .projects-wrapper .project .img-wrapper.desktop img {
+#projects .projects-wrapper .project .img-wrapper.desktop img {
   width: 100%;
+  z-index: 0;
 }
-.timeline .projects-wrapper .project .img-wrapper:before {
+#projects .projects-wrapper .project .img-wrapper img {
+  position: relative;
+}
+#projects .projects-wrapper .project .img-wrapper:before {
   position: absolute;
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background: red;
-  opacity: 0.1;
-  z-index: 10;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
-.timeline .projects-wrapper .project p {
-  position: absolute;
+
+#contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#contact .contact-form {
+  width: 80%;
+  max-width: 450px;
+}
+#contact .contact-form input,
+#contact .contact-form textarea {
+  width: 100%;
+  margin-top: 8px;
+  padding: 0 10px;
+  font-size: 1em;
+  border-radius: 3px;
+  caret-color: #ED6767;
+}
+#contact .contact-form input::placeholder,
+#contact .contact-form textarea::placeholder {
+  color: #B8B8B8;
+  font-size: 0.7em;
+}
+#contact .contact-form input[type=submit] {
+  background: #2c2c2e;
+  color: #fff;
+  transition: all 0.3s ease-in;
+}
+#contact .contact-form input[type=submit]:hover {
+  background: #000;
 }
 
 /*# sourceMappingURL=main.css.map */
