--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,6 +130,9 @@ $nav-font: 500 0.7em/2em Montserrat, sans-serif;
 html { 
 	font-size: 20px; 
 	cursor: none; 
+	scroll-snap-type: y proximity;
+	overflow-y: scroll;
+	scroll-behavior: smooth;
 	
 	::-webkit-scrollbar {
 		width: 3px;
@@ -157,6 +160,8 @@ body {
 	background: $background;
 	font: $paragraph;
 	color: $grey;
+
+	
 
 	::-moz-selection {
 		color: $red;
@@ -205,7 +210,8 @@ body {
 	section {
 		// ! change each sec
 		min-height: 100vh;
-		overflow-x: hidden;
+		// overflow-x: hidden;
+		scroll-snap-align: start;
 
 		&#contact {
 			background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
@@ -325,9 +331,9 @@ body {
 
 
 
-/* <---------- Home ----------> */
+/* <---------- hello ----------> */
 
-#home {
+#hello {
 	display: flex;justify-content: center; align-items: center;
 
 	.section-content {
@@ -366,8 +372,7 @@ body {
 			.font_small {
 				margin-top: 15px;
 			}
-	}
-
+		}
 	}
 }
 
@@ -384,7 +389,7 @@ body {
 		max-width: 1500px;
 		max-height: 500px;
 		height: 60vh;
-		display: flex; flex-direction: column; 
+		display: flex; flex-direction: column; justify-content: space-between;
 	}
 	
 	.sub-section_1 {
@@ -426,9 +431,11 @@ body {
 
 #projects {
 	position: relative;
-	display: grid;
+	// display: grid;
 	height: 690px;
-	overflow: hidden;
+	display: flex;justify-content: center; align-items: center;
+
+	overflow-x: hidden;
 
 	.controls-wrapper {
 		position: absolute;
@@ -443,7 +450,7 @@ body {
 			height: 50px;
 			border-radius: 50%;
 			background-color: transparent;
-			font-size: 1.2 rem;
+			font-size: 1.2rem;
 			i {
 				color: #fff;
 				font-size: 0.8em;
@@ -492,7 +499,7 @@ body {
 	}
 
 	.projects-wrapper {
-		border: white 1px solid;
+		// border: white 1px solid;
 		position: relative;
 		height: 600px;
 		top: 0;
@@ -539,13 +546,15 @@ body {
 					}
 				}
 				&.desktop { 
-					width: 75%;
+					// width: 55%;
+					height: 85%;
 					img {
-						width: 100%;
-						// height: 100%;
+						// width: 100%;
+						height: 100%;
 						z-index: 0;
 					}
 				}
+				// todo: media query at 850 px to make it narrower
 
 				img {
 					position: relative;
@@ -570,6 +579,8 @@ body {
 
 #contact {
 	display: flex; justify-content: center; align-items: center;
+
+
 	.contact-form {
 		width: 80%;
 		max-width: 450px;
